# dfp-number-sys

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES_AT_FUTURE_ME.md  NOTICE  README.md  Taskfile.yml  build.rs  coverage.sh
.github/workflows/: build-linux-ix86-64.yml  build-linux.yml  build-macos-arm64.yml  build-macos-ix86-64.yml  build-macos-m1.yml  build-macos.yml  build-windows-ix86-64.yml  build-windows.yml
IntelRDFPMathLib20U3-old/: README  eula.txt
benches/: bid128_add.rs  bid128_from_string.rs  bid128_mul.rs  bid128_to_string.rs
library-20u3/: README
library-20u3/float128/: dpml_exception.c
src/: bid128.rs  bid128_000.rs  bid32_000.rs  bid64_000.rs  common.rs  lib.rs
tests/: bid128_000.rs  common.rs  mod.rs
tests/bid128_000/: bid128_0000.rs  bid128_abs.rs  bid128_acos.rs  bid128_acosh.rs  bid128_add.rs  bid128_asin.rs  bid128_asinh.rs  bid128_atan.rs  bid128_atan2.rs  bid128_atanh.rs  bid128_cbrt.rs  bid128_class.rs  bid128_constants.rs  bid128_copy.rs  bid128_copy_sign.rs  bid128_cos.rs  bid128_cosh.rs  bid128_div.rs  bid128_erf.rs  bid128_erfc.rs  bid128_exp.rs  bid128_exp10.rs  bid128_exp2.rs  bid128_expm1.rs  bid128_fdim.rs  bid128_fma.rs  bid128_fmod.rs  bid128_frexp.rs  bid128_from.rs  bid128_from_string.rs  bid128_hypot.rs  bid128_ilogb.rs  bid128_infinite.rs  bid128_is_canonical.rs  bid128_is_finite.rs  bid128_is_nan.rs  bid128_is_normal.rs  bid128_is_signaling.rs  bid128_is_signed.rs  bid128_is_subnormal.rs  (+80 more)
tests/bid32_000/: bid32_abs.rs  bid32_acos.rs  bid32_acosh.rs  bid32_add.rs  bid32_asin.rs  bid32_asinh.rs  bid32_atan.rs  bid32_atan2.rs  bid32_atanh.rs  bid32_cbrt.rs  bid32_class.rs  bid32_constants.rs  bid32_copy.rs  bid32_copy_sign.rs  bid32_cos.rs  bid32_cosh.rs  bid32_div.rs  bid32_erf.rs  bid32_erfc.rs  bid32_exp.rs  bid32_exp10.rs  bid32_exp2.rs  bid32_expm1.rs  bid32_fdim.rs  bid32_fma.rs  (+94 more)
(+123 files in other folders)
