[package]
name = "dfp-number-sys"
version = "0.2.8"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Rust bindings for Intel® Decimal Floating-Point Math Library"
documentation = "https://docs.rs/dfp-number-sys"
repository = "https://github.com/EngosSoftware/dfp-number-sys.git"
keywords = ["decimal", "floating", "point", "arithmetic"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["/downloads"]

[features]
default = []
call-by-reference = []
global-rounding = []
global-exception-flags = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
